push log to array